test/negative/auto_in_enum_payload.cg
enum Bad {
    Some(auto),
}

fn main() -> i32 { 0 }

